--- a/thesis/chap5.tex
+++ b/thesis/chap5.tex
@@ -6,7 +6,7 @@
 %% prompt when you run the file main.tex through LaTeX.
 \chapter{Results and Testing}
 This chapter will describe 
-\section{An Example: String Quartet No.7 in E-flat major, K.160}
+\section{An Example: Eine kleine Nachtmusik, K.525, W. A. Mozart)}
 This section will walk through an example of how the entire \texttt{OMRMIDICorrector} system works on Mozart's \textit{String Quartet No.7 in E-flat major, K.160}.
 
 \subsection{Preparing the Raw Input}
