--- a/thesis/chap2.tex
+++ b/thesis/chap2.tex
@@ -18,10 +18,8 @@ Sequence alignment in bioinformatics is an application of well-studied problem. 
 
 \centering
 \includegraphics[scale=.5]{proteinalign}
-\caption{An example of protein alignment}
+\caption{An example of protein alignment \cite{proteins}}
 \end{figure}
-
-[[figure out how to cite this image: \verb|https://commons.wikimedia.org/wiki/File:An_excerpt_of_a_multiple_sequence_alignment_of_TMEM66_proteins.png|]]
 
 There are various computational algorithms that can be used to solve sequence alignment including slower but more accurate dynamic programming algorithms and faster but less accurate probabilistic or heuristic-based algorithms. In my work, it makes more sense to use the slower but more accurate methods, as our datasets are not so large and small mistakes that might be permissible and overlook-able in larger data could be much more egregious in smaller contexts.
 
