--- a/thesis/main.bib
+++ b/thesis/main.bib
@@ -3,6 +3,24 @@
 	# "\newcommand{\singleletter}[1]{#1} "
 	# "\newcommand{\switchargs}[2]{#2#1} " }
 	
+@misc{proteins,
+  title = {An excerpt of a multiple sequence alignment of tmem66 proteins},
+  author ={Wikid25},
+  url = {https://commons.wikimedia.org/wiki/File:An_excerpt_of_a_multiple_sequence_alignment_of_TMEM66_proteins.png},
+  month = 4,
+  year = 2013
+}
+
+@article{byrd-testbed, 
+  title        =           {Towards a Standard Testbed for Optical Music Recognition: Definitions, Metrics, and Page Images}, 
+  volume   =         {44.3}, 
+  url     =        {http://homes.soic.indiana.edu/donbyrd/Papers/OMRStandardTestbed_figinline.pdf}, 
+  journal   =         {Journal of New Music Research}, 
+  author   =     {Byrd, Donald and Simonsen, Jakob Grue}, 
+  year  = {2015}, 
+  pages={169-- 195}
+}
+	
 @inproceedings{church,
   author        ={Church, Maura and Cuthbert, Michael Scott},
   title         ={Improving Rhythmic Transcriptions via Probability Models Applied Post-OMR},
@@ -20,12 +38,39 @@
   year =         {2014}
 }
 
+@inproceedings{peachnote,
+  author        ={Viro, Vladimir},
+  title         ={Peachnote: Music Score Search and Analysis Platform},
+  crossref =     {ismir12},
+  pages =        {359-- 362}
+}
+
+@proceedings{ismir12,
+  editor =       {Klapuri, Anssi and Leider Kolby},
+  title =        "ISMIR 2014",
+  booktitle =    "Proceedings of the 12th Conference of the International Society for Music Information Retrieval ",
+  publisher =    {ISMIR},
+  venue =        {Miami, Florida },
+  month =        10,
+  year =         {2014}
+}
+
+
 @phdthesis{typke,
   author       = {Peter Joslin}, 
   title        = {Music Retrieval based on Melodic Similarity},
   school       = {Universiteit Utrecht},
   year         = 2007
  }
+ 
+ @article{temperley-1997, 
+  title        =           {An Algorithm for Harmonic Analysis}, 
+  volume   =         {15.1}, 
+  journal   =         { Music Perception: An Interdisciplinary Journal}, 
+  author   =     {Temperley, David}, 
+  year  = {1997}, 
+  pages={31--68}
+}
  
 @article{hewlett, 
   title        =           {A Base-40 Number-line Representation of Musical Pitch Notation}, 
@@ -34,7 +79,7 @@
   journal   =         {Musikometrika}, 
   author   =     {Hewlett, Walter B}, 
   year  = {1992}, 
-  pages={1?14}
+  pages={1--14}
 }
 
 @article{rebelo, 
@@ -54,8 +99,17 @@
   year         = 2013
  }
  
-@book{k160, 
-   title={Scanned sheet music of String Quartet No.7 in E-flat major, K.160/159a}, 
-   url={http://imslp.org/wiki/String_Quartet_No.7_in_E-flat_major,_K.160/159a_(Mozart,_Wolfgang_Amadeus)}, 
-   journal={IMSLP Petrucci Music Library}
- }
+@misc{k525, 
+  title={Eine Kleine Nachtmusik, K. 525}, 
+  author={Mozart, Wolfgang Amadeus},
+  url={http://ks.petruccimusiclibrary.org/files/imglnks/usimg/5/57/IMSLP01776-Mozart_EineKleineNachtmusik_Score.pdf},
+  journal={IMSLP}
+}
+ 
+ @misc{openscore, 
+   author = {shoogle},
+   title={Introducing OpenScore}, 
+   url={https://musescore.org/en/user/57401/blog/2017/01/11/introducing-openscore}, 
+   journal={ MuseScore}
+   
+}
