--- a/thesis/main.bib
+++ b/thesis/main.bib
@@ -2,13 +2,12 @@
 	# "\newcommand{\printfirst}[2]{#1} "
 	# "\newcommand{\singleletter}[1]{#1} "
 	# "\newcommand{\switchargs}[2]{#2#1} " }
-	
+
 @misc{proteins,
   title = {An excerpt of a multiple sequence alignment of tmem66 proteins},
-  author ={Wikid25},
-  url = {https://commons.wikimedia.org/wiki/File:An_excerpt_of_a_multiple_sequence_alignment_of_TMEM66_proteins.png},
-  month = 4,
-  year = 2013
+  key = {protein alignment},
+  howpublished = {\url{https://commons.wikimedia.org/wiki/File:An_excerpt_of_a_multiple_sequence_alignment_of_TMEM66_proteins.png}},
+  note = {Accessed: 2017-05-10}
 }
 
 @article{byrd-testbed, 
@@ -63,7 +62,7 @@
   year         = 2007
  }
  
- @article{temperley-1997, 
+ @article{temperley, 
   title        =           {An Algorithm for Harmonic Analysis}, 
   volume   =         {15.1}, 
   journal   =         { Music Perception: An Interdisciplinary Journal}, 
@@ -90,7 +89,7 @@
   author={Rebelo, Ana and Fujinaga, Ichiro and Paszkiewicz, Filipe and Marcal, Andre R. S. and Guedes, Carlos and Cardoso, Jaime S.}, 
   year={2012}, 
   month={Feb}, 
-  pages={173?190}}
+  pages={173--190}}
 
 @phdthesis{white,
   author       = {White, Christopher Wm.}, 
@@ -99,17 +98,16 @@
   year         = 2013
  }
  
-@misc{k525, 
-  title={Eine Kleine Nachtmusik, K. 525}, 
+@misc{k525,
+  title = {Eine Kleine Nachtmusik, K. 525},
   author={Mozart, Wolfgang Amadeus},
-  url={http://ks.petruccimusiclibrary.org/files/imglnks/usimg/5/57/IMSLP01776-Mozart_EineKleineNachtmusik_Score.pdf},
-  journal={IMSLP}
+  howpublished = {\url{http://ks.petruccimusiclibrary.org/files/imglnks/usimg/5/57/IMSLP01776-Mozart_EineKleineNachtmusik_Score.pdf}},
+  note = {Accessed: 2017-05-23}
 }
- 
- @misc{openscore, 
-   author = {shoogle},
-   title={Introducing OpenScore}, 
-   url={https://musescore.org/en/user/57401/blog/2017/01/11/introducing-openscore}, 
-   journal={ MuseScore}
-   
+
+@misc{openscore,
+  title = {Introducing OpenScore},
+  key = {openscore},
+  howpublished = {\url{https://musescore.org/en/user/57401/blog/2017/01/11/introducing-openscore}},
+  note = {Accessed: 2017-05-22}
 }
