--- a/thesis/chap5.tex
+++ b/thesis/chap5.tex
@@ -34,13 +34,19 @@ The basic raw input of the system is an OMR score and a MIDI file. A scanned cop
 \caption{The first page of the scanned copy of the score found on IMSLP.}
 \end{figure}
 
-I used SmartScore's built-in OMR tool to convert the scanned score of K.525 into an ENF file. Then I exported the post-OMR file as a musicXML file. 
+I used SmartScore's built-in OMR tool to convert the scanned score of K.525 into an ENF file. Then I exported the post-OMR file as a musicXML file.
 
 Similarly for the K.525 MIDI file, I used SmartScore to parse the original file and exported it as a musicXML file. 
 
 The last step of preparing the raw input is to parsing the musicXML files with the \texttt{music21} library so that they are \texttt{Stream} objects. This can be done by passing in the musicXML filepaths to the \texttt{parse} method in the \texttt{converter} class. We will call these two parsed streams \texttt{k525midiStream} and \texttt{k525omrStream}. 
-
-\subsection{}
+\begin{minted}{python}
+from music21 import *
+k525MidiFilepath = 'path_to_k525_mid_to_xml.xml'
+k525OmrFilepath= 'path_to_k525_omr_to_xml.xml'
+k525midistream = converter.parse(k525MidiFilepath)
+k525omrstream = converter.parse(k525OmrFilepath)
+\end{minted}
+\subsection{Running OMRMIDICorrector on K.525}
 
 \section{Timing} \label{timing}
 
