--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -28,7 +28,9 @@
 \documentclass[12pt,twoside]{mitthesis}
 \usepackage{amsmath}
 \usepackage{lgrind}
+\usepackage{minted}
 \usepackage{graphicx, float}
+\usepackage{hyperref} 
 \graphicspath{ {images/} }
 %% These have been added at the request of the MIT Libraries, because
 %% some PDF conversions mess up the ligatures.  -LB, 1/22/2014
