--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -28,7 +28,7 @@
 \documentclass[12pt,twoside]{mitthesis}
 \usepackage{amsmath}
 \usepackage{lgrind}
-\usepackage{minted}
+%\usepackage{minted}
 \usepackage{graphicx, float}
 \usepackage{hyperref} 
 \graphicspath{ {images/} }
@@ -50,9 +50,9 @@
 %% process, or `all' to process all files which you \include.
 %% Krishna Sethuraman (1990).
 
- \typein [\files]{Enter file names to process, (chap1,chap2 ...), or `all' to process all files:}
- \def\all{all}
- \ifx\files\all \typeout{Including all files.} \else \typeout{Including otnly \files.} \includeonly{\files} \fi
+% \typein [\files]{Enter file names to process, (chap1,chap2 ...), or `all' to process all files:}
+% \def\all{all}
+% \ifx\files\all \typeout{Including all files.} \else \typeout{Including otnly \files.} \includeonly{\files} \fi
 
 \begin{document}
 
