Updates from ShareLaTeX

--- a/thesis/appb.tex
+++ b/thesis/appb.tex
@@ -5,7 +5,7 @@
 \begin{figure}
 \vspace{2.4in}
 \caption{}
-\label{}
+\label{sample1}
 \end{figure}
 \clearpage
 \newpage
@@ -13,7 +13,7 @@
 \begin{figure}
 \vspace{2.4in}
 \caption{}
-\label{}
+\label{sample2}
 \end{figure}
 \clearpage
 \newpage
